revamping deprecated code in Base,Default and Reg. Panels