@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.example'
-version '1.0-SNAPSHOT'
+version '1.1.0-alpha'
 
 repositories {
     mavenCentral()
@@ -35,7 +35,7 @@ java {
 }
 
 tasks.withType(JavaCompile) {
-    options.compilerArgs += ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
+    options.compilerArgs += ['-Xlint:deprecation']
 }
 
 tasks.withType(Test) {
